--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,11 +2,13 @@
   display: grid;
   grid-template-columns: 45% 45%;
   grid-template-rows: auto;
-  gap: 10%;
+  column-gap: 10%;
+  row-gap: 5%;
   align-items: center;
   justify-items: center;
   grid-template-areas: 
-  "img intro-container";
+  "img intro-container"
+  "footer footer";
 }
 
 .home-container h1 {
@@ -19,13 +21,18 @@
   color: var(--black);
 }
 
+.home-container .footer {
+  grid-area: footer;
+}
+
 
 @media only screen and (max-width: 700px) {
   .home-container {
     grid-template-columns: 100%;
     grid-template-areas: 
     "img"
-    "intro-container";
+    "intro-container"
+    "footer";
   }
 
   .home-container p {
@@ -33,7 +40,6 @@
   }
 
   .home-container h1 {
-    margin-bottom: 0;
     font-size: 2.5rem;
   }
 }
@@ -43,6 +49,7 @@
 }
 
 .intro-container p {
+  text-align: center;
   font-size: 1.5rem;
 }
 
